flame-dashboard/flame-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: flame
  labels:
    name: flame
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
