flame-dashboard/flame-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flame
  namespace: flame
  labels:
    app: flame
spec:
  type: ClusterIP
  ports:
    - name: flame
      port: 5005
      targetPort: 5005
  selector:
    app: flame
