flame-dashboard/flame-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flame
  namespace: flame
  labels:
    app: flame
spec:
  entryPoints:
  - websecure
  routes:
    - match: Host(`flame.yourdomain.com`)
      kind: Rule
      services:
        - name: flame
          port: 5005
  tls:
    certResolver: le
